# zero2prod

./: .env.example  .gitignore  Cargo.toml  README.md  configuration.yaml  makefile
.github/workflows/: main.yaml
migrations/: 000_base.sql  000_test.sql  002_fastembeds.sql
src/: configuration.rs  db.rs  lib.rs  main.rs  startup.rs
src/jobs/: embed_scrapes.rs  fast_embed_scrapes.rs  migrations.rs  mod.rs  process.rs  scrape_sm.rs
src/jobs/migrations/: migrate.rs  mod.rs
src/models/: fast_embeds.rs  jobs.rs  mod.rs  scrape.rs  scrape_embeddings.rs  sm_scrape.rs  subscriptions.rs  utils.rs
src/routes/: green_recs.rs  health_check.rs  index.rs  jobs.rs  mod.rs  scrapes.rs  subscriptions.rs
src/services/: mod.rs  open_ai.rs  scraper.rs
src/templates/: index.html
tests/: health_check.rs  subscribe.rs  subscriptions.rs
tests/common/: mod.rs
