[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4"
bytes = "1.5.0"
chrono = "0.4.35"
config = "0.14.0"
libsql = "0.3.1"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = "1.8.0"

[dev-dependencies]
reqwest = "0.11.25"
