[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[[bin]]
name = "sm_scraper"
path = "src/bin/sm_scraper.rs"

[[bin]]
name = "embed_scrapes"
path = "src/bin/embed_scrapes.rs"

[[bin]]
name = "fast_embed_scrapes"
path = "src/bin/fast_embed_scrapes.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
actix-web = "4"
bytes = "1.5.0"
chrono = "0.4.35"
config = "0.14.0"
libsql = "0.3.1"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = "1.8.0"
reqwest = "0.11.25"
scraper = "0.19.0"
async-openai = "0.19.1"
tiktoken-rs = { version = "0.5.8", features = ["async-openai"] }
tera = "1.19.1"
dotenvy = "0.15.7"
fastembed = "3.5.0"
